<resources>
    <string name="app_name">YangTaopai</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">登录</string>
    <string name="order">全部订单</string>
    <string name="wait_pay">待付款</string>
    <string name="shipment">待发货</string>
    <string name="havest">待收货</string>
    <string name="already">已完成</string>
</resources>
